fix accordion safari

--- a/app/assets/stylesheets/accordion.css
+++ b/app/assets/stylesheets/accordion.css
@@ -17,6 +17,10 @@
     justify-content: space-between;
     padding-block: var(--size-4);
 
+    &::-webkit-details-marker {
+      display: none;
+    }
+
     &::after {
       background-image: var(--accordion-icon, url("chevron-down.svg"));
       background-size: cover;
